Update image project & nam

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tegar Pratama</title>
+    <title>Egar</title>
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -27,7 +27,7 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Tegar Pratama</span>
+          <span class="header__logo-sub">Egar</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,7 +84,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is Tegar Pratama</h1>
+        <h1 class="heading-primary">Hey, My name is Egar</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             I am a backend developer who likes designing and building efficient and innovative systems.  Here, you'll find projects that showcase my skills.
@@ -192,19 +192,19 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/projects/mock14.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Shell B2B</h3>
+              <h3 class="projects__row-content-title">Shell B2B (APIs)</h3>
               <p class="projects__row-content-desc">
                 Website-based application for negotiating costs, assigning craftsmen and monitoring damage repair projects in shops specifically for internal teams.
               </p>
               <div class="project-details__tools-used">
-                <h3 class="project-details__content-title">Tools Used (APIs)</h3>
+                <h3 class="project-details__content-title">Tools Used</h3>
                 <div class="skills">
                   <div class="skills__skill">Javascript</div>
                   <div class="skills__skill">NodeJs</div>
@@ -225,19 +225,19 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/projects/mock15.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">B2B Corp</h3>
+              <h3 class="projects__row-content-title">B2B Corp (APIs)</h3>
               <p class="projects__row-content-desc">
                 Companion application from <strong>Shell B2B</strong> specifically for vendors who need improvements to their shops.
               </p>
               <div class="project-details__tools-used">
-                <h3 class="project-details__content-title">Tools Used (APIs)</h3>
+                <h3 class="project-details__content-title">Tools Used</h3>
                 <div class="skills">
                   <div class="skills__skill">Javascript</div>
                   <div class="skills__skill">NodeJs</div>
@@ -265,12 +265,12 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Kontraktor</h3>
+              <h3 class="projects__row-content-title">Kontraktor (APIs)</h3>
               <p class="projects__row-content-desc">
                 Project that produced 2 mobile applications & 1 website. A project specifically for managing building construction projects and the required budget.
               </p>
               <div class="project-details__tools-used">
-                <h3 class="project-details__content-title">Tools Used (APIs)</h3>
+                <h3 class="project-details__content-title">Tools Used</h3>
                 <div class="skills">
                   <div class="skills__skill">Javascript</div>
                   <div class="skills__skill">NodeJs</div>
@@ -297,7 +297,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Report Management System Finance</h3>
+              <h3 class="projects__row-content-title">Report Management System Finance (Full Stack)</h3>
               <p class="projects__row-content-desc">
                 Application to recap the total accumulated partner wages that need to be paid.
               </p>
@@ -331,12 +331,12 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Kanggo x Mitra10</h3>
+              <h3 class="projects__row-content-title">Kanggo x Mitra10 (APIs)</h3>
               <p class="projects__row-content-desc">
                 Kanggo collaboration with Mitra 10.
               </p>
               <div class="project-details__tools-used">
-                <h3 class="project-details__content-title">Tools Used (APIs)</h3>
+                <h3 class="project-details__content-title">Tools Used</h3>
                 <div class="skills">
                   <div class="skills__skill">Javascript</div>
                   <div class="skills__skill">NodeJs</div>
@@ -363,12 +363,12 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Kanggo CMS & Homecare Apps</h3>
+              <h3 class="projects__row-content-title">Kanggo CMS & Homecare Apps (APIs)</h3>
               <p class="projects__row-content-desc">
                 B2C Kanggo's main business.
               </p>
               <div class="project-details__tools-used">
-                <h3 class="project-details__content-title">Tools Used (APIs)</h3>
+                <h3 class="project-details__content-title">Tools Used</h3>
                 <div class="skills">
                   <div class="skills__skill">Javascript</div>
                   <div class="skills__skill">NodeJs</div>
@@ -397,7 +397,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Transmittal Advice</h3>
+              <h3 class="projects__row-content-title">Transmittal Advice (Full Stack)</h3>
               <p class="projects__row-content-desc">
                 Approval of documents and monitoring of document delivery along with proof of delivery.
               </p>
@@ -428,12 +428,12 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Teken</h3>
+              <h3 class="projects__row-content-title">Teken (APIs)</h3>
               <p class="projects__row-content-desc">
                 Layered document approval between divisions with digital-based signatures
               </p>
               <div class="project-details__tools-used">
-                <h3 class="project-details__content-title">Tools Used (APIs)</h3>
+                <h3 class="project-details__content-title">Tools Used</h3>
                 <div class="skills">
                   <div class="skills__skill">PHP</div>
                   <div class="skills__skill">Laravel</div>
@@ -459,7 +459,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Kano Photo Studio</h3>
+              <h3 class="projects__row-content-title">Kano Photo Studio (Full Stack)</h3>
               <p class="projects__row-content-desc">
                 Marketing website for photo studio, pre-wedding and wedding businesses Kano Studio.
               </p>
@@ -490,7 +490,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Sistem Inventaris I-Tech</h3>
+              <h3 class="projects__row-content-title">Sistem Inventaris I-Tech (Full Stack)</h3>
               <p class="projects__row-content-desc">
                 An inventory system specific to a university.
               </p>
@@ -515,7 +515,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Career Development Center</h3>
+              <h3 class="projects__row-content-title">Career Development Center (Full Stack)</h3>
               <p class="projects__row-content-desc">
                 My undergraduate final project is intended for the campus and parties who collaborate with the campus to create job vacancies specifically for students and alumni.
               </p>
@@ -540,7 +540,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Garsans News</h3>
+              <h3 class="projects__row-content-title">Garsans News (Full Stack)</h3>
               <p class="projects__row-content-desc">
                 My exercise project to create web portal.
               </p>
@@ -631,7 +631,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">Tegar Pratama</h4>
+            <h4 class="heading heading-sm text-lt">Egar</h4>
             <p class="main-footer__short-desc">
               I hope we can work together, see you soon!
             </p>
